# HackRadar

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
hackradar/: config.py  main.py
hackradar-ui/: package-lock.json  package.json
hackradar-ui/src/app/: globals.css  layout.tsx
hackradar-ui/src/hooks/: useProjectPoller.ts  useScoreMutation.ts
hackradar-ui/src/lib/: queryKeys.ts  types.ts  utils.ts
hackradar/agents/: __init__.py  base.py  categorization_agent.py  scoring_agent.py
hackradar/agents/categorization/: __init__.py  agent.py  helpers.py  prompts.py
hackradar/agents/llm/: __init__.py  openai_compatible.py  providers.py
hackradar/agents/models/: __init__.py  providers.py
hackradar/agents/scoring/: __init__.py  agent.py  helpers.py  prompts.py  strategies.py  tools.py  web_search.py
hackradar/agents/strategies/: __init__.py  base.py
hackradar/api/: deps.py
hackradar/api/v1/: criteria.py  (+3 more)
hackradar/db/: session.py
hackradar/models/: __init__.py  base.py  category.py  criteria.py  project.py  score.py
hackradar/rag/: ingestion.py  retriever.py  tools.py
hackradar/repositories/: base.py  category_repo.py  criteria_repo.py  project_repo.py  score_repo.py
hackradar/schemas/: category.py  criteria.py  project.py  score.py
hackradar/services/: categorization_service.py  ingestion_service.py  project_service.py  scoring_service.py
test_data/: repo_name.txt
tests/: conftest.py
tests/test_api/: test_criteria.py  test_projects.py
(+40 files in other folders)
